external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/syntaxErrors11.scxml.errors
:/tst_parser/data/syntaxErrors11.scxml:6:68: error: Unknown element Assign
