external/qt-everywhere-opensource-src-5.8.0/qtscxml/tests/auto/parser/data/syntaxErrors11.scxml
<?xml version="1.0" ?>
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0">
    <state id="wrapper">
        <transition event="OP.INSERT">
            <if cond="_event.data.operator == 'OPER.PLUS'">
                <Assign location="long_expr" expr="long_expr+'-'" />
            </if>
        </transition>
    </state>
</scxml>
